CREATE TABLE "phoneticPattern" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "letters" varchar(10) NOT NULL,
  "sound" varchar(10) NOT NULL,
  "reference" varchar(50) NOT NULL
);

CREATE TABLE "word" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "secret" varchar(50) NOT NULL,
  "phonetic" varchar(50) NOT NULL,
  "date" date UNIQUE NOT NULL
);

CREATE TABLE "phoneticComponent" (
  "wordId" integer NOT NULL,
  "patternId" integer NOT NULL,
  PRIMARY KEY ("wordId", "patternId")
);

CREATE TABLE "user" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "username" varchar(150) UNIQUE NOT NULL,
  "email" varchar(254) UNIQUE NOT NULL,
  "passwordHash" varchar(128) NOT NULL,
  "correctGuesses" integer DEFAULT 0,
  "wrongGuesses" integer DEFAULT 0,
  "streak" integer DEFAULT 0
);

CREATE TABLE "validWord" (
  "word" varchar(50) PRIMARY KEY
);

CREATE INDEX ON "phoneticPattern" ("sound");

CREATE INDEX ON "phoneticPattern" ("letters");

CREATE INDEX ON "word" ("date");

CREATE INDEX ON "validWord" ("word");

ALTER TABLE "phoneticComponent" ADD FOREIGN KEY ("wordId") REFERENCES "word" ("id") ON DELETE CASCADE;

ALTER TABLE "phoneticComponent" ADD FOREIGN KEY ("patternId") REFERENCES "phoneticPattern" ("id") ON DELETE RESTRICT;
